# python-library

./: .gitignore  .pypirc.template  LICENSE  PATENT_DISCLOSURE_TEMPLATE.md  README.md  RELEASE.md  how_it_works.html  linkedin_announcement.html  proof_of_authorship.html  pyproject.toml
.github/workflows/: publish.yml
examples/: multi_provider.py  quickstart.py
netlify-deploy/: index.html
src/ai_bridge_kit/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  retry.py
src/ai_bridge_kit/providers/: __init__.py  anthropic_provider.py  base.py  local_function_provider.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py
tests/: test_client.py  test_ollama_provider.py  test_retry.py
