[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ai-bridge-kit"
version = "0.1.2"
description = "Unified Python bridge for integrating AI providers and custom AI functions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Soham Dahivalkar" }
]
keywords = ["ai", "python", "llm", "integration", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typing-extensions>=4.8; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/sohammmmm10/python-library"
Repository = "https://github.com/sohammmmm10/python-library"
Issues = "https://github.com/sohammmmm10/python-library/issues"

[project.optional-dependencies]
openai = ["openai>=1.56.0"]
anthropic = ["anthropic>=0.34.0"]
all = [
  "openai>=1.56.0",
  "anthropic>=0.34.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
ai-bridge = "ai_bridge_kit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_bridge_kit"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/PATENT_DISCLOSURE_TEMPLATE.md",
  "/RELEASE.md",
  "/.pypirc.template",
]
